Add second half

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -201,19 +201,33 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col">17:00&nbsp;-&nbsp;17:15</div>
+          <div class="col">16:00&nbsp;-&nbsp;16:15</div>
           <div class="col-10">Break (Optional socialisation on gather.town)</div>
         </div>
         <div class="row">
-          <div class="col">18:00&nbsp;-&nbsp;18:25</div>
+            <div class="col">16:15&nbsp;-&nbsp;17:30</div>
+            <div class="col-10">Challenge system presentations</div>
+        </div>
+        <div class="row">
+          <ul style="list-style: none">
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/forum?id=PHadbLGjHRL" target="_blank">GestureMaster: Graph-based Speech-driven Gesture Generation</a> by Chi Zhou, Tengyue Bian, Kang Chen</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/forum?id=RZP6nErM2Xa" target="_blank">UEA Digital Humans entry to the GENEA Challenge 2022</a> by Jonathan Windle, David Greenwood, Sarah Taylor</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/forum?id=fO_Q4q1dFAA" target="_blank">Exemplar-based Stylized Gesture Generation from Speech: An Entry to the GENEA challenge 2022</a> by Saeed Ghorbani, Ylva Ferstl, Marc-André Carbonneau</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/forum?id=gMTaia--AB2" target="_blank"> The IVI Lab entry to the GENEA Challenge 2022 -- A Tacotron2 Based Method for Co-Speech Gesture Generation
+                With Locality-Constraint Attention Mechanism</a> by Che-Jui Chang, Sen Zhang, Mubbasir Kapadia</li>
+            <li><span style="margin-right: 10px;"> </span> <a href="https://openreview.net/forum?id=zEqdFwAPhhO" target="_blank"> The DeepMotion entry to the GENEA Challenge 2022</a> by Shuhong Lu, Andrew Feng</li>
+          </ul>
+        </div>
+        <div class="row">
+          <div class="col">17:30&nbsp;-&nbsp;17:45</div>
           <div class="col-10">Group discussion</div>
         </div>
         <div class="row">
-          <div class="col">18:25&nbsp;-&nbsp;18:30</div>
+          <div class="col">17:45&nbsp;-&nbsp;18:00</div>
           <div class="col-10">Reproducibility award and Closing remarks</div>
         </div>
         <div class="row">
-          <div class="col">18:30&nbsp;-&nbsp;</div>
+          <div class="col">18:00&nbsp;-&nbsp;</div>
           <div class="col-10">Informal mingle</div>
         </div>
       </div>
