Play with time links

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -184,7 +184,7 @@
         <h4>All times in India Standard Time</h4>
         <div>Note, all times are in the <a href="https://everytimezone.com/s/97f68314" target="_blank">India Standard timezone</a>. The Challenge presentations will take place virtually over Zoom on November 11th. <br><br></div>
         <div class="row">
-            <div class="col">14:30&nbsp;-&nbsp;14:40</div>
+            <div class="col"> <a href="https://everytimezone.com/s/97f68314" target="_blank">14:30&nbsp;-&nbsp;14:40</a>  </div>
             <div class="col-10">Opening statement</div>
         </div>
         <div class="row">
