--- a/challenge/index.html
+++ b/challenge/index.html
@@ -188,7 +188,7 @@
             <div class="col-10">Opening statement</div>
         </div>
         <div class="row">
-            <div class="col">14:45&nbsp;-&nbsp;16:00</div>
+            <div class="col"><a href="https://everytimezone.com/s/ad7f8507" target="_blank">14:45&nbsp;-&nbsp;16:00</a> </div>
             <div class="col-10">Challenge system presentations</div>
         </div>
         <div class="row">
@@ -201,11 +201,11 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col">16:00&nbsp;-&nbsp;16:15</div>
+          <div class="col"><a href="https://everytimezone.com/s/5c9fc556" target="_blank">16:00&nbsp;-&nbsp;16:15 </a> </div>
           <div class="col-10">Break (Optional socialisation on gather.town)</div>
         </div>
         <div class="row">
-            <div class="col">16:15&nbsp;-&nbsp;17:30</div>
+            <div class="col"> <a href="https://everytimezone.com/s/13f193f7" target="_blank">16:15&nbsp;-&nbsp;17:30 </a></div>
             <div class="col-10">Challenge system presentations</div>
         </div>
         <div class="row">
@@ -219,7 +219,7 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col">17:30&nbsp;-&nbsp;17:45</div>
+          <div class="col"><a href="https://everytimezone.com/s/08118ade" target="_blank">17:30&nbsp;-&nbsp;17:45 </a> </div>
           <div class="col-10">Group discussion</div>
         </div>
         <div class="row">
