--- a/workshop/index.html
+++ b/workshop/index.html
@@ -158,9 +158,9 @@
       <div class="w-100">
         <h2 class="mb-5">Planned Workshop programme</h2>
         <h4>All times in India Standard Time</h4>
-        <div>Note, all times are in the <a href="https://everytimezone.com/s/97f68314" target="_blank">India Standard timezone</a>. The workshop will take place virtually over Zoom on November 7th. <br><br></div>
+        <div>Note, all times are in the <a href="https://everytimezone.com/s/0f610aec" target="_blank">India Standard timezone</a>. The workshop will take place virtually over Zoom on November 7th. <br><br></div>
         <div class="row">
-            <div class="col">14:30&nbsp;-&nbsp;14:45</div>
+            <div class="col"> <a href="https://everytimezone.com/s/0f610aec" target="_blank">14:30&nbsp;-&nbsp;14:45</a> </div>
             <div class="col-10">Opening statement</div>
         </div>
         <div class="row">
@@ -282,6 +282,7 @@
                     The generation of motions coordinated with speech utterances is important for dialogue robots or avatars, in both autonomous and tele-operated systems, to express humanlikeness and tele-presence. For that purpose, we have been studying on the relationships between speech and motion, and methods to generate motions from speech, for example, lip motion from formants, head motion from dialogue functions, facial and upper body motions coordinated with vocalized emotional expressions (such as laughter and surprise), hand gestures from linguistic and prosodic information, and gaze behaviors from dialogue states. In this talk, I will give an overview of our research activities on motion analysis and generation, and evaluation of speech-driven motions generated in several humanoid robots (such as the android ERICA, and a desktop robot CommU).
                   </div>
                 </div>
+
 
         <h3 class="mt-5" id="judith_holler"><a href="https://www.mpi.nl/people/holler-judith"> Judith Holler (Radboud University)</a></h3>
         <div class="row">
