--- a/workshop/index.html
+++ b/workshop/index.html
@@ -164,15 +164,15 @@
             <div class="col-10">Opening statement</div>
         </div>
         <div class="row">
-            <div class="col">14:45&nbsp;-&nbsp;15:30</div>
+            <div class="col"> <a href="https://everytimezone.com/s/8e829508" target="_blank">14:45&nbsp;-&nbsp;15:30</a> </div>
             <div class="col-10">Keynote presentation by Carlos T.Ishi</div>
         </div>
         <div class="row">
-          <div class="col">15:30&nbsp;-&nbsp;15:40</div>
+          <div class="col"> <a href="https://everytimezone.com/s/0d30da32" target="_blank">15:30&nbsp;-&nbsp;15:40</a> </div>
           <div class="col-10">Break (Optional socialisation on gather.town)</div>
         </div>
         <div class="row">
-            <div class="col">15:40&nbsp;-&nbsp;17:00</div>
+            <div class="col"> 15:40&nbsp;-&nbsp;17:00</div>
             <div class="col-10">Workshop paper presentations</div>
         </div>
         <div class="row">
@@ -188,7 +188,7 @@
           <div class="col-10">Break (Optional socialisation on gather.town)</div>
         </div>
         <div class="row">
-          <div class="col">17:15&nbsp;-&nbsp;18:00</div>
+          <div class="col"> <a href="https://everytimezone.com/s/be641ea2" target="_blank">17:15&nbsp;-&nbsp;18:00</a> </div>
           <div class="col-10">Keynote presentation by Judith Holler</div>
         </div>
         <div class="row">
@@ -196,7 +196,7 @@
           <div class="col-10">Group discussion</div>
         </div>
         <div class="row">
-          <div class="col">18:25&nbsp;-&nbsp;18:30</div>
+          <div class="col"> <a href="https://everytimezone.com/s/3001ce50" target="_blank">18:25&nbsp;-&nbsp;18:30</a> </div>
           <div class="col-10">Reproducibility award and Closing remarks</div>
         </div>
         <div class="row">
