Add discussion back

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -219,12 +219,16 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col">17:30&nbsp;-&nbsp;17:40</div>
-          <div class="col-10">Closing statement</div>
+          <div class="col"><a href="https://everytimezone.com/s/08118ade" target="_blank">17:30&nbsp;-&nbsp;17:45 </a> </div>
+          <div class="col-10">Group discussion</div>
         </div>
         <div class="row">
-          <div class="col">17:40&nbsp;-&nbsp;</div>
-          <div class="col-10">Informal mingle on gather.town</div>
+          <div class="col">17:45&nbsp;-&nbsp;18:00</div>
+          <div class="col-10">Reproducibility award and Closing remarks</div>
+        </div>
+        <div class="row">
+          <div class="col">18:00&nbsp;-&nbsp;</div>
+          <div class="col-10">Informal mingle</div>
         </div>
       </div>
     </section>
