Add Reproducibility Award

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -262,6 +262,11 @@
           <li>extent (ideal: all results can be verified)</li>
           <li>data accessibility (ideal: all data used is publicly available)</li>
         </ul>
+        <div style="text-align: center; margin-top: 30px;">
+                  This year's award is awarded to: <b>Automatic facial expressions, gaze direction and head movements generation of a virtual agent</b> <br> by
+                  <i>Alice Delbosc, Stéphane Ayache, Magalie Ochs</i>. <br><br>
+                  <img src="img/GENEA_workshop_reproducibility_award" alt="reproducibility award" width=600>
+                </div>
       </div>
 
     </section>
