--- a/challenge/index.html
+++ b/challenge/index.html
@@ -420,25 +420,8 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
 
     <hr class="m-0">
     
-    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="reproducibility-award">
-      <div class="w-100">
-        <h2 class="mb-5">Reproducibility Award</h2>
-        Reproducibility is a cornerstone of the scientific method. Lack of reproducibility is a serious issue in contemporary research which we want to address at our workshop. To encourage authors to make their papers reproducible, and to reward the effort that reproducibility requires, we are introducing the GENEA Workshop Reproducibility Award. All short and long papers presented at the GENEA Workshop will be eligible for this award. Please note that it is the camera-ready version of the paper which will be evaluated for the reward.
-        <br><br>
-        The award is awarded to the paper with the greatest degree of reproducibility. The assessment criteria include:
-        <ul>
-          <li>ease of reproduction (ideal: just works, if there is code - it is well documented and we can run it)</li>
-          <li>extent (ideal: all results can be verified)</li>
-          <li>data accessibility (ideal: all data used is publicly available)</li>
-        </ul>
-        <div style="text-align: center; margin-top: 30px;">
-                  This year's award is awarded to: <b>The IVI Lab entry to the GENEA Challenge 2022 – A Tacotron2 Based Method for Co-Speech Gesture Generation With Locality-Constraint Attention Mechanism</b> <br> by
-                  <i>Che-Jui Chang, Sen Zhang, Mubbasir Kapadia</i>. <br><br>
-                  <img src="/2022/img/GENEA_challenge_reproducibility_award.png" alt="reproducibility award" width=600>
-        </div>
-      </div>
-
-    </section>-->
+ 
+    </section>
     
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="accepted-papers">
       <div class="w-100">
@@ -494,6 +477,24 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
     </div>
     </section>
 
+    <hr class="m-0">
+    <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="reproducibility-award">
+      <div class="w-100">
+        <h2 class="mb-5">Reproducibility Award</h2>
+        Reproducibility is a cornerstone of the scientific method. Lack of reproducibility is a serious issue in contemporary research which we want to address at our workshop. To encourage authors to make their papers reproducible, and to reward the effort that reproducibility requires, we are introducing the GENEA Workshop Reproducibility Award. All short and long papers presented at the GENEA Workshop will be eligible for this award. Please note that it is the camera-ready version of the paper which will be evaluated for the reward.
+        <br><br>
+        The award is awarded to the paper with the greatest degree of reproducibility. The assessment criteria include:
+        <ul>
+          <li>ease of reproduction (ideal: just works, if there is code - it is well documented and we can run it)</li>
+          <li>extent (ideal: all results can be verified)</li>
+          <li>data accessibility (ideal: all data used is publicly available)</li>
+        </ul>
+        <div style="text-align: center; margin-top: 30px;">
+                  This year's award is awarded to: <b>The IVI Lab entry to the GENEA Challenge 2022 – A Tacotron2 Based Method for Co-Speech Gesture Generation With Locality-Constraint Attention Mechanism</b> <br> by
+                  <i>Che-Jui Chang, Sen Zhang, Mubbasir Kapadia</i>. <br><br>
+                  <img src="/2022/img/GENEA_challenge_reproducibility_award.png" alt="reproducibility award" width=600>
+        </div>
+      </div>
 
 
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="data-n-proceedings">
@@ -503,7 +504,6 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
       </div>
 
     </section>
-    <hr class="m-0">
 
     <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="organising-committee">
