--- a/challenge/index.html
+++ b/challenge/index.html
@@ -496,7 +496,7 @@ The GENEA Challenge seeks to advance scientific knowledge relating to automatic 
         </div>
       </div>
 
-
+    <hr class="m-0">
     <section class="iva-section p-3 p-lg-5 d-flex align-items-center" id="data-n-proceedings">
       <div class="w-100">
         <h2 class="mb-5">Data and proceedings</h2>
