--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
             <!--  -->
 
             <p class="mb-5">
-
+		
+	    <div class="col-sm-12 col-md-12">
+		    <div class="row">
+		      <div class="col-6">
+			NOTE: this is an archive site. If you're looking for the 2023 GENEA challenge, please <a
+                href="https://genea-workshop.github.io/2023/" target="_blank">follow this link</a>.
+		      </div>
+		    </div>
+		    <hr>
+              </div>
 	    <div class="col-sm-12 col-md-12">
 		    <div class="row">
 		      <div class="col-4">
