Add link to 2023 challenge

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -103,7 +103,15 @@
 
             <div class="subheading mb-5">Generation and Evaluation of Non-verbal Behaviour for Embodied Agents</div>
             <!--  -->
+	    
 
+ 	      <div class="col-sm-12 col-md-12">
+		    <div class="row">
+		      	 <p style="color:red">NOTE: this is an archive site. If you're looking for the 2023 GENEA challenge, please <a
+                href="https://genea-workshop.github.io/2023/" target="_blank">follow this link</a>.</p>
+		    </div>
+		    <hr>
+              </div>
             <p class="mb-5">
               <p> Challenge results now available! Results and materials from the Challenge can be found on <a href="https://youngwoo-yoon.github.io/GENEAchallenge2022"> the main GENEA Challenge 2022 results page</a>.
               
