Increase the font size of the link to the 2023 page

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 		
 	    <div class="col-sm-12 col-md-12">
 		    <div class="row">
-		      
-		      	 <p style="color:red">NOTE: this is an archive site. If you're looking for the 2023 GENEA challenge, please <a
+		       <p style="color:red;font-size:150%;">NOTE: this is an archive site. If you're looking for the 2023 GENEA challenge, please <a
                 href="https://genea-workshop.github.io/2023/" target="_blank">follow this link</a>.</p>
 		      
 		    </div>
