--- a/workshop/index.html
+++ b/workshop/index.html
@@ -101,7 +101,7 @@
               and evaluation, and hopes to stimulate the discussions on how to improve both the
               generation methods and the evaluation of the results. We invite all interested researchers to submit a paper related to their
               work in the area and to participate in the workshop. This is the third installment of the GENEA Workshop,
-              for more information about the 2021 installment, please go <a href="https://genea-workshop.github.io/2021/" target="_blank">here</a>.<br><br>
+              to learn more about the GENEA Initiative, please go <a href="https://genea-workshop.github.io/" target="_blank">here</a>.<br><br>
 
 
             </p>
